--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-    "password": "1"
+    "password": "1",
+    "permited_files": ["pdf","doc","docx","ppt","js","html","py", "mp4","png","jpeg","jpg","mp3","wav"]
 }
